Fixed layout shift on devtools mode

--- a/aim/web/ui/src/pages/Metrics/components/SelectForm/SelectForm.scss
+++ b/aim/web/ui/src/pages/Metrics/components/SelectForm/SelectForm.scss
@@ -2,7 +2,7 @@
 
 .SelectForm__container {
   flex: 1;
-  padding: 0.625rem 1.5em;
+  padding: 0.5rem 1.5em;
   display: flex;
 }
 
@@ -18,7 +18,7 @@
   min-width: 12rem;
 
   .TagLabel {
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 }
 
