--- a/aim/web/ui/src/pages/Runs/components/SearchBar/SearchBar.scss
+++ b/aim/web/ui/src/pages/Runs/components/SearchBar/SearchBar.scss
@@ -4,14 +4,6 @@
   padding: 16px 24px;
   align-items: center;
 }
-
-.Runs_Search_Bar__Input {
-  fieldset {
-    border: none;
-  }
-}
-
-
 .Runs_Search_Bar__Button {
   width: 100px;
   height: 32px !important;
