--- a/aim/web/ui/src/styles/components/_inputs.scss
+++ b/aim/web/ui/src/styles/components/_inputs.scss
@@ -1,6 +1,32 @@
-@use 'src/styles/abstracts' as *;
-@import 'src/styles/abstracts/_variables.scss';
+@use "src/styles/abstracts" as *;
+@import "src/styles/abstracts/_variables.scss";
 
+body {
+  .MuiOutlinedInput-root {
+    &:hover {
+      .MuiOutlinedInput-notchedOutline {
+        border-color: #90afda;
+      }
+    }
+
+    .MuiOutlinedInput-notchedOutline {
+      border-color: #bdcee8;
+      border-width: 1px !important;
+    }
+  }
+
+  .Mui-disabled {
+    color: $text-color-50;
+    .MuiOutlinedInput-notchedOutline {
+      border-color: #d1ddef !important;
+    }
+  }
+  .Mui-focused {
+    .MuiOutlinedInput-notchedOutline {
+      border-color: $primary-color !important;
+    }
+  }
+}
 
 .TextField {
   .MuiOutlinedInput-notchedOutline {
